objects/Error_Message__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Error_Number_Type__c</fullName>
        <description>This field currently contains two types of error numbers.  User which means the error is meant to be for the user.  Support which means the error is meant for the support group</description>
        <label>Error Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Number</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <description>Used to identify the source the error message is used for.  For example, enrollment.</description>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Used to store predefined error messages.</description>
    <label>Error Message</label>
    <nameField>
        <displayFormat>EM-{000}</displayFormat>
        <label>Error Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Error_Number__c</columns>
        <columns>Source_Type__c</columns>
        <columns>Error_Number_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>